--- a/.github/workflows/auri.yml
+++ b/.github/workflows/auri.yml
@@ -192,7 +192,7 @@ jobs:
           path: rpmbuild/RPMS/x86_64/*.rpm
 
   upload-rpm:
-    if: github.repository == 'auri/auri' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
+    if: github.repository == 'auri/auri' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/'))
     runs-on: ubuntu-latest
     needs:
       - build-data
