Config: be clear about mandatory options
so the user can see them directly

--- a/rpm/assets/config.env
+++ b/rpm/assets/config.env
@@ -28,7 +28,7 @@
 # Enable/disable SMTP functionality
 # SMTP_ENABLE=true
 
-# SMTP relay used for mail submission
+# SMTP relay used for mail submission (mandatory)
 # SMTP_HOST=
 
 # SMTP port used for mail submission
@@ -46,10 +46,10 @@
 # Skip verification of peer certificates
 # SMTP_TLS_SKIP_VERIFY=false
 
-# Email used as FROM email in the mails sent by auri
+# Email used as FROM email in the mails sent by auri (mandatory)
 # FROM_EMAIL=noreply@ipa.example.com
 
-# Email addresses which should be notified on new account requests
+# Email addresses which should be notified on new account requests (mandatory)
 # NOTIFICATION_ADDRESSES=admin1@example.com, admin2@example.com
 
 # Domains of email addresses, which are allowed to request accounts (mandatory)
