--- a/.github/workflows/auri.yml
+++ b/.github/workflows/auri.yml
@@ -113,6 +113,8 @@ jobs:
 
   build-binary:
     runs-on: ubuntu-latest
+    needs:
+      - build-data
     strategy:
       matrix:
         go: [ '1.16.7' ]
@@ -150,7 +152,7 @@ jobs:
       - name: build the binary
         run: |
           yarn install
-          make build
+          make build VERSION=${{ needs.build-data.outputs.version }}-${{ needs.build-data.outputs.release }}
       - uses: actions/upload-artifact@v2
         with:
           name: auri-binary
