Fix: version pinning of copr CLI
as newer versions and/or theri deps are broken somewhere

--- a/.github/workflows/auri.yml
+++ b/.github/workflows/auri.yml
@@ -232,7 +232,7 @@ jobs:
         with:
           name: auri.src.rpm
       - name: setup environment
-        run: pip install copr-cli
+        run: pip install -r support/ci/copr-cli/requirements.txt
       - name: prepare copr token
         run: |
           mkdir -p ~/.config/
