Config: dedicated option for email templates

--- a/rpm/assets/config.env
+++ b/rpm/assets/config.env
@@ -68,6 +68,9 @@
 # Timeframe for validation of email addresses during account requests in hours
 # EMAIL_VALIDATION_TIMEFRAME=24
 
+# Path to the email templates, can be used for customizing (optional)
+# EMAIL_TEMPLATE_PATH=
+
 # Email subject for approval notifications
 # EMAIL_SUBJECT_APPROVED=Account request was approved
 
