New notification package
so we can make the entire notification handling here and use it as hooks from other codebase

--- a/rpm/assets/config.env
+++ b/rpm/assets/config.env
@@ -49,6 +49,9 @@
 # Email used as FROM email in the mails sent by auri (mandatory)
 # FROM_EMAIL=noreply@ipa.example.com
 
+# Enable notifications to admins via email
+# ADMIN_EMAIL_NOTIFICATIONS_ENABLE=true
+
 # Email addresses which should be notified on new account requests (mandatory)
 # NOTIFICATION_ADDRESSES=admin1@example.com, admin2@example.com
 
