Feature: notify admins when account was approved
currently without the name of approval

--- a/rpm/assets/config.env
+++ b/rpm/assets/config.env
@@ -92,6 +92,9 @@
 # Email subject for admin notifications about new requests
 # EMAIL_SUBJECT_ADMIN_NEW_REQUEST_NOTIFICATION=New account request
 
+# Email subject for admin notifications about approval of requests
+# EMAIL_SUBJECT_ADMIN_REQUEST_APPROVED_NOTIFICATION=Account request was approved
+
 # Timeframe in hours, where account validation token is valid
 # ACCOUNT_VALIDATION_TIMEFRAME=48
 
