--- a/rpm/assets/config.env
+++ b/rpm/assets/config.env
@@ -95,6 +95,9 @@
 # Email subject for admin notifications about approval of requests
 # EMAIL_SUBJECT_ADMIN_REQUEST_APPROVED_NOTIFICATION=Account request was approved
 
+# Email subject for admin notifications about rejection of requests
+# EMAIL_SUBJECT_ADMIN_REQUEST_DECLINED_NOTIFICATION=Account request was declined
+
 # Timeframe in hours, where account validation token is valid
 # ACCOUNT_VALIDATION_TIMEFRAME=48
 
