Feature: run shell hooks for workflow events

--- a/rpm/assets/config.env
+++ b/rpm/assets/config.env
@@ -55,6 +55,18 @@
 # Email addresses which should be notified on new account requests (mandatory)
 # ADMIN_EMAIL_NOTIFICATION_ADDRESSES=admin1@example.com, admin2@example.com
 
+# Enable shell hooks for admin notifications
+# ADMIN_SHELL_NOTIFICATIONS_ENABLE=false
+
+# Shell hook executed for admin notifications about new requests
+# ADMIN_SHELL_NEW_REQUEST=
+
+# Shell hook executed for admin notifications about approval of requests
+# ADMIN_SHELL_REQUEST_APPROVED=
+
+# Shell hook executed for admin notifications about rejection of requests
+# ADMIN_SHELL_REQUEST_DECLINED=
+
 # Domains of email addresses, which are allowed to request accounts (mandatory)
 # ALLOWED_DOMAINS=
 
