Dedicated log folder for auri
we need it to cover our new permission and user model

--- a/rpm/assets/config.env
+++ b/rpm/assets/config.env
@@ -147,7 +147,7 @@
 # ACCOUNT_CHECK_MAX_REMINDERS=1
 
 # Log file for IPA operations
-# LOG_IPA = /var/log/auri-ipa.log
+# LOG_IPA = /var/log/auri/ipa.log
 
 # Log file for Auri operations
-# LOG_AURI = /var/log/auri.log
+# LOG_AURI = /var/log/auri/auri.log
