--- a/.github/workflows/auri.yml
+++ b/.github/workflows/auri.yml
@@ -1,5 +1,8 @@
 name: Auri
 
+env:
+  github_repo: artem-experiments/auri
+
 on:
   push:
     branches:
@@ -201,7 +204,7 @@ jobs:
           path: rpmbuild/RPMS/x86_64/*.rpm
 
   upload-release-assets:
-    if: github.repository == 'artem-experiments/auri' && startsWith(github.head_ref, 'release/v')
+    if: github.repository == '${{ env.github_repo }}' && startsWith(github.head_ref, 'release/v')
     runs-on: ubuntu-latest
     needs:
       - build-rpm
@@ -228,7 +231,7 @@ jobs:
             auri-binary-linux-x86_64
 
   upload-rpm:
-    if: github.repository == 'artem-experiments/auri' && (github.ref == 'refs/heads/master' || startsWith(github.head_ref, 'release/v'))
+    if: github.repository == '${{ env.github_repo }}' && (github.ref == 'refs/heads/master' || startsWith(github.head_ref, 'release/v'))
     runs-on: ubuntu-latest
     needs:
       - build-data
@@ -254,7 +257,7 @@ jobs:
         run: copr-cli build --nowait ${{ needs.build-data.outputs.upload_target }} *.src.rpm
 
   pass-all-jobs:
-    if: "!(github.repository == 'artem-experiments/auri' && startsWith(github.head_ref, 'release/v')) && always()"
+    if: "!(github.repository == '${{ env.github_repo }}' && startsWith(github.head_ref, 'release/v')) && always()"
     needs:
     - linting
     - unit-tests
@@ -268,7 +271,7 @@ jobs:
         jobs: ${{ toJSON(needs) }}
 
   pass-all-jobs-release:
-    if: github.repository == 'artem-experiments/auri' && startsWith(github.head_ref, 'release/v') && always()
+    if: github.repository == '${{ env.github_repo }}' && startsWith(github.head_ref, 'release/v') && always()
     needs:
     - linting
     - unit-tests
