--- a/.github/workflows/auri.yml
+++ b/.github/workflows/auri.yml
@@ -106,8 +106,8 @@ jobs:
       - name: set build data
         id: build_data
         run: |
-          if [[ "${{ github.ref }}" =~ ^refs/tags/.*$ ]]; then
-            echo "Running on the release tag - building release..."
+          if [[ "${{ github.head_ref }}" =~ ^release/v.*$ ]]; then
+            echo "Running on the release branch - building release..."
             echo "::set-output name=version::${{ steps.determine_last_version.outputs.version }}.${{ steps.determine_last_version.outputs.patch_version }}"
             echo "::set-output name=release::0"
             echo "::set-output name=target::auri/releases"
@@ -204,6 +204,7 @@ jobs:
     if: github.repository == 'auri/auri' && startsWith(github.head_ref, 'release/v')
     runs-on: ubuntu-latest
     needs:
+      - build-data
       - build-rpm
       - build-binary
     permissions:
@@ -223,6 +224,7 @@ jobs:
       - name: Upload release assets
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: v${{ needs.build-data.outputs.version }}
           files: |
             *.rpm
             auri-binary-linux-x86_64
